<resources>
    <string name="app_name">Vinilos</string>
    <string name="title_home">Home</string>
    <string name="home">Home</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="collectors">Collectors</string>
    <string name="user">User</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="album_cover">Album cover</string>
    <string name="search">Search</string>
    <string name="add_album">Add Album</string>
    <string name="homepage">Homepage</string>
    <string name="add_collector">Add Collector</string>
    <string name="collector_image">Collector picture</string>
    <string name="follow">Follow</string>
    <string name="verified_artist">Verified artist</string>
    <string name="artist_image">Artist image</string>
    <string name="crear_album">Crear Album</string>
    <string name="nombre">Nombre</string>
    <string name="ingresar_nombre_del_album">Ingresar nombre del album</string>
    <string name="artista">Artista</string>
    <string name="insertar_artista">Insertar Artista</string>
    <string name="descripcion">Descripcion</string>
    <string name="ingresar_descripcion_del_album">Ingresar descripcion del album</string>
    <string name="genero">Genero</string>
    <string name="ingresar_genero_del_album">Ingresar genero del album</string>
    <string name="discografia">Discografia</string>
    <string name="ingresar_discografia">Ingresar discografia</string>
    <string name="fecha_de_lanzamiento">Fecha de lanzamiento</string>
    <string name="ingresar_fecha_de_lanzamiento">Ingresar fecha de lanzamiento</string>
    <string name="imagen_del_album">Imagen del album</string>
    <string name="album_cover_preview">Album cover preview</string>
    <string name="buscar_imagen_del_album">Buscar imagen del album</string>
    <string name="tracks">Tracks</string>
    <string name="ingresar_track">Ingresar track</string>
    <string name="create_album">Create album</string>
    <string name="creation_date">Creation Date:</string>
    <string name="description">Description</string>
    <string name="back_to_artists">Back to artists</string>
    <string name="back_to_albums">Back to albums</string>
    <string name="back_to_collectors">Back to collectors</string>
    <string name="album">Album</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="go_to_albums_page">Go to Albums page</string>
    <string name="go_to_collectors_page">Go to collectors page</string>
    <string name="go_to_artists_page">Go to artists page</string>
    <string name="album_title_in_header">Album title in header</string>
    <string name="album_name_in_details">Album name in details</string>
    <string name="collectors_page_title">Collectors page title</string>
    <string name="album_name_input_field">Album name input field</string>
    <string name="artists_section_button">Artists section button</string>
    <string name="collector_name_label">Nombre del coleccionista</string>
    <string name="telephone_label">Telefono del coleccionista</string>
    <string name="email_label">Email del coleccionista</string>
    <string name="albums_label">Albums del coleccionista</string>
    <string name="browse_artists">Browse artists</string>
    <string name="collector_name_title">Detalle del coleccionista %1$s</string>
    <string name="album_name_title">Detalle del álbum %1$s</string>
    <string name="no_albums_found">Este coleccionista no tiene albumes registrados</string>
    <string name="album_with_bullet">• %1$s</string>
    <string name="album_collector_description">Álbum: %1$s</string>
    <string name="artists_page">Página del artista</string>
    <string name="albums_page">Página de álbumes</string>
    <string name="collectors_page">Página de coleccionistas</string>
    <string-array name="genre_options">
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string-array name="record_label_options">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>

    <!-- Track strings -->
    <string name="add_track">Asociar Tracks</string>
    <string name="no_tracks_yet">No hay tracks en este álbum aún</string>
    <string name="add_track_title">Agregar Track</string>
    <string name="track_name">Nombre de la canción</string>
    <string name="track_name_hint">Ej: Decisiones</string>
    <string name="track_duration">Duración</string>
    <string name="track_duration_hint">Ej: 5:05</string>
    <string name="save_song">Save Song</string>
    <string name="track_added_successfully">Track agregado exitosamente</string>
    <string name="error_adding_track">Error al agregar el track</string>
    <string name="error_track_name_required">El nombre de la canción es requerido</string>
    <string name="error_track_duration_required">La duración es requerida</string>
    <string name="error_invalid_duration_format">Formato de duración inválido. Usa M:SS o MM:SS</string>
</resources>